Fix responsive on mobile and tablet

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,11 +1,10 @@
-header {
-    overflow-x: hidden;
-}
-
 .header-bg {
+    overflow-x: hidden;
     background-color: #111111;
+    width: 100%;
     flex-wrap: wrap;
     padding: 10px 0;
+    display: flex;
 }
 
 .lec {
@@ -36,22 +35,19 @@ header {
     cursor: pointer;
 }
 
-.navbar {
-    
-}
-
 .nav-links {
     display: flex;
     gap: 1.5rem;
 }
 
 nav.nav-links a {
-    padding: 5px 15px;
+    padding: 5px 50px;
     color: white;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     text-decoration: none;
+    gap: 4rem;
 }
 
 nav.nav-links a::after {
@@ -81,9 +77,17 @@ nav.nav-links a:hover {
     color: white;
     cursor: pointer;
     display: none;
+    position: relative;
+    right: -35%
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1024px) {
+    nav.nav-links a {
+        padding: 5px 50px;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
     .hamburger {
         display: block;
     }
@@ -103,11 +107,23 @@ nav.nav-links a:hover {
         padding: 10px;
         text-align: center;
     }
+
+    .header-bg {
+        overflow: hidden;
+    }
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1023px) {
     nav.nav-links {
         gap: 1rem;
+        justify-content: space-between;
+        padding: 0 60px
+    }
+
+    .logos {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 30%;
     }
 
     .lec {
@@ -118,5 +134,10 @@ nav.nav-links a:hover {
     .riot {
         width: 80px;
         height: 40px;
+    }
+
+    .header-bg {
+        overflow: hidden;
+        display: block;
     }
 }
